--- a/mytest/todo
+++ b/mytest/todo
@@ -4,3 +4,10 @@
 - recognise cgi request
 - cgi output parser python
 - save file in correct folder and make Http response with file in it (change img in html)
+- handle turn on or off directory listing for request
+- default error pages
+- create 301 redirect based on config
+- Default file if request is a directory
+- Add file saving directory (from the config) if a file gets uploaded
+Left to do:
+- Python scripts fixen
