--- a/mytest/todo
+++ b/mytest/todo
@@ -2,7 +2,7 @@
 - add serverName from config in http response @done
 - make ability to import error pages from config @done
 - add right error codes in current parser
-- logic post / get / delete in parser
+- logic post / get / delete in parser @done
 - recognise cgi request @done
 - cgi output parser python
 - save file in correct folder and make Http response with file in it (change img in html)
@@ -13,3 +13,4 @@
 Left to do:
 - Python scripts fixen
 - know which server you are on
+//-exec set follow-fork-mode child
