--- a/mytest/todo
+++ b/mytest/todo
@@ -14,3 +14,4 @@ Left to do:
 - Python scripts fixen
 - know which server you are on
 //-exec set follow-fork-mode child
+curl --resolve example.com:8070:127.0.0.1 http://example.com:8070 
