--- a/mytest/todo
+++ b/mytest/todo
@@ -16,7 +16,4 @@ Left to do:
 //-exec set follow-fork-mode child
 curl --resolve example.com:8070:127.0.0.1 http://example.com:8070 
 
-
-fix index page
-delete
-405
+environment variables script
